@@ -9,6 +9,10 @@ Version 393    ???
 --New /MOTHER command to locate your mother (sometimes she's not your leader,
   so the /LEADER command doesn't always work to find her).  Fixes #926
 
+--Support for using extra animation slots in emotes.
+
+
+
 
 Editor Fixes:
 
